# asha

./: Cargo.toml  justfile
api/: Cargo.toml
api/src/: lib.rs
api/src/io/: fs.rs  mod.rs  stdin.rs  stdout.rs
bootloader/src/: main.rs
common/src/: alloc.rs
compiler/: Cargo.toml  build.rs  def  test_program
compiler/src/: main.rs
compiler/src/elaboration/: ctx.rs  err.rs  metadata.rs  mod.rs  name.rs  patterns.rs  reduce.rs  subst.rs  unify.rs
compiler/src/log/: mod.rs  pretty.rs
compiler/src/module/: mod.rs  name.rs  prim.rs  unique.rs
compiler/src/reducer/: mod.rs
compiler/src/spine/: mod.rs
compiler/src/syntax/: ast.rs  error.rs  kind.rs  lexer.rs  mod.rs  parser.rs  token.rs  tree.rs
compiler/test/fixtures/: class  kernel  patterns  proof  raw  record  test  test_program
kernel/: Cargo.toml  aarch64-kernel.json  linker-aarch64.ld  linker-x86_64.ld  rust-toolchain.toml  x86_64-kernel.json
kernel/src/: gdt.rs  heap.rs  idt.rs  main.rs  serial.rs  vectors.rs
kernel/src/ic/: gic.rs  mod.rs  pic.rs
kernel/src/text/: color.rs  fonts.rs  mod.rs
kernel/src/tty/: color.rs  font.rs  mod.rs  writer.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
