[workspace]
resolver = "2"
members = ["api", "common","compiler", "runtime"]

[workspace.package]
publish = false
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.dependencies]
raph_common = { path = "common" }
raph_api = { path = "api" }
raph_runtime = { path = "runtime" }
thiserror = { version = "2", default-features = false }
anyhow = { version = "1", default-features = false }