[workspace]
resolver = "2"
members = ["api", "bootloader", "common","compiler", "kernel", "runtime"]

[workspace.package]
publish = false
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.dependencies]
common = { path = "common" }
api = { path = "api" }
runtime = { path = "runtime" }
thiserror = { version = "2", default-features = false }
anyhow = { version = "1", default-features = false }
chumsky = { version = "0.12", default-features = false }
miette = { git = "https://github.com/huitseeker/miette", branch = "no-std", default-features = false, features=["fancy-base"] }
spin = "0.10"
talc = "4.4"
lazy_static = { version = "1.5", default-features = false, features = ["spin_no_std"] }

[patch.crates-io]
textwrap = { git = "https://github.com/asha-os/textwrap" }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("asha"))'] }
